# ZA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST_GITHUB.md  Dockerfile  PERFIL_README.md  README.md  ZA_README.md  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: arena.yml  ci.yml  demo.yml  healthcheck.yml  smoke.yml  telegram.yml
crm/: manage.py
crm/crm/: settings.py  urls.py  wsgi.py
crm/members/: admin.py  models.py  store.py
crm/members/management/commands/: learn_trip.py
crm/members/migrations/: 0001_initial.py
docs/: OPERATIONS.md
evals/: dataset.jsonl  judge.py  run_evals.py
scripts/: demo_md.py  smoke.py
src/copilot/: __init__.py  api.py  cli.py  config.py  healthcheck.py  mcp_server.py  schemas.py  telegram_bot.py
src/copilot/data/: __init__.py  airlines.json  airlines_reliability.json  airports.json  sample_flights.json
src/copilot/gateway/: __init__.py  anthropic.py  base.py  mock.py  openrouter.py  router.py
src/copilot/guardrails/: __init__.py  pii.py
src/copilot/memory/: __init__.py  base.py  json_store.py  learn.py
src/copilot/observability/: trace.py
src/copilot/pipeline/: __init__.py  amadeus.py  extract.py  fastflights_source.py  flights.py  live.py  monitor.py  opensky_source.py  orchestrator.py  recommend.py  risk.py  scraper.py  synthetic_source.py  travelpayouts.py  weather.py
tests/: test_amadeus.py  test_api.py  test_django_store.py  test_gateway.py  test_healthcheck.py  test_mcp.py  test_memory.py  test_monitor.py  test_opensky_source.py  test_pii.py  test_pipeline.py  test_price_sources.py  test_risk.py  test_scraper.py  test_synthetic.py  test_telegram.py
