[project]
name = "ascend-concierge-copilot"
version = "0.1.0"
description = "AI-native concierge copilot: turns a messy traveler request into a quoted, risk-scored, white-glove trip recommendation over a multi-model gateway."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "django>=5.0",
    "dj-database-url>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
copilot = "copilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.pytest.ini_options]
pythonpath = ["src", "crm"]
asyncio_mode = "auto"
testpaths = ["tests"]
